objects/SalesObservation__c.object
<CustomObject>
    <description>Vlocity Observation is a custom object used to record and manage predefined Strength, Weaknesses, Opportunities, and Threats.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Designates is this Observation value can be linked to an Account Plan.</description>
        <inlineHelpText>Designates is this Observation value can be linked to an Account Plan.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CatchAll__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if this Observation value is used in the “OTHER” function as a catch all of non-specified Account Observation. There can only be one CatchAll record.</description>
        <inlineHelpText>Designates if this Observation value is used in the “OTHER” function as a catch all of non-specified Account Observation. There can only be one CatchAll record.</inlineHelpText>
        <label>CatchAll</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>A detailed description of the standard Observation record.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A detailed description of the standard Observation record.</inlineHelpText>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Impact_Area__c</fullName>
        <description>Designates the Area of impact that this Observation value drives when linked to an Account.</description>
        <inlineHelpText>Designates the Area of impact that this Observation value drives when linked to an Account.</inlineHelpText>
        <label>Impact Area</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Claims</fullName>
                </value>
                <value>
                    <fullName>Membership</fullName>
                </value>
                <value>
                    <fullName>Premium</fullName>
                </value>
                <value>
                    <fullName>Relationship</fullName>
                </value>
                <value>
                    <fullName>Support</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact_Type__c</fullName>
        <description>Designates the Type of measurable impact that this Observation value drives when linked to an Account.</description>
        <inlineHelpText>Designates the Type of measurable impact that this Observation value drives when linked to an Account.</inlineHelpText>
        <label>Impact Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>#</fullName>
                </value>
                <value>
                    <fullName>$</fullName>
                </value>
                <value>
                    <fullName>%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Impact__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Impact</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Objective__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Objectives are predefined and used in Account Planning. Objectives can be linked to a parent Observation, but are not required to be.</description>
        <inlineHelpText>Objectives are predefined and used in Account Planning. Objectives can be linked to a parent Observation, but are not required to be.</inlineHelpText>
        <label>Objective</label>
        <referenceTo>CustomerObjective__c</referenceTo>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Solution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Solution record linked to this Observation record.</description>
        <inlineHelpText>The Solution record linked to this Observation record.</inlineHelpText>
        <label>Solution</label>
        <referenceTo>SalesSolution__c</referenceTo>
        <relationshipName>Observations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Type of Observation: Strength, Weakness, Threat</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Strength</fullName>
                </value>
                <value>
                    <fullName>Weakness</fullName>
                </value>
                <value>
                    <fullName>Threat</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Observation (SWT)</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Impact_Area__c</columns>
        <columns>Impact_Type__c</columns>
        <columns>Description__c</columns>
        <columns>Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Observations</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_Observations_Active</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>Impact_Area__c</columns>
        <columns>Impact_Type__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Active__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Observations (Active)</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Observation</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Observations (SWT)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>